@@ -7,6 +7,9 @@ Revision history for Perl extension Module::Build.
   - Better error message in case package declaration is not found
     when searching for version. [Alexandr Ciornii]
 
+  - Skips 'release_status' tests on perl < 5.8.1 due to buggy
+    treatment of dotted-decimal version numbers [David Golden]
+
 0.36_15 - Wed Aug 25 10:41:28 EDT 2010
 
   Bug fixes:
